workspace_errors_18.txt
cargo :     Checking 
zero-protocol v1.0.0 (C
:\Users\Revanth\Downloa
ds\ZERO\zero-protocol)
At line:1 char:1
+ cargo check 
--workspace --offline 
2>&1 | Out-File 
-FilePath workspace ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 ze...\zero-protoco    
l):String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
warning: unused 
import: 
`zeroid::ZeroId`
 --> zero-protocol\src\
api.rs:5:21
  |
5 | use zero_identity::
{zeroid::ZeroId, bundle
::OwnedKeyBundle};
  |                    
 ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error: declaration of 
a `no_mangle` static
  --> C:\Users\Revanth\
Downloads\ZERO\target\d
ebug\build\zero-protoco
l-f468ca3d3c411ee7\out/
zero.uniffi.rs:19:1
   |
19 | #[no_mangle]
   | ^^^^^^^^^^^^
   |
   = note: the 
linker's behavior with 
multiple libraries 
exporting duplicate 
symbol names is 
undefined and Rust 
cannot provide 
guarantees when you 
manually override them
note: the lint level 
is defined here
  --> zero-protocol\src
\lib.rs:7:11
   |
 7 | 
#![forbid(unsafe_code)]
   |           
^^^^^^^^^^^

error: declaration of 
a `no_mangle` function
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:126:1
    |
126 | #[no_mangle]
    | ^^^^^^^^^^^^
    |
    = note: the 
linker's behavior with 
multiple libraries 
exporting duplicate 
symbol names is 
undefined and Rust 
cannot provide 
guarantees when you 
manually override them

error: declaration of 
a `no_mangle` function
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:131:1
    |
131 | #[no_mangle]
    | ^^^^^^^^^^^^
    |
    = note: the 
linker's behavior with 
multiple libraries 
exporting duplicate 
symbol names is 
undefined and Rust 
cannot provide 
guarantees when you 
manually override them

error: declaration of 
a `no_mangle` function
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:136:1
    |
136 | #[no_mangle]
    | ^^^^^^^^^^^^
    |
    = note: the 
linker's behavior with 
multiple libraries 
exporting duplicate 
symbol names is 
undefined and Rust 
cannot provide 
guarantees when you 
manually override them

error: declaration of 
a `no_mangle` function
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:141:1
    |
141 | #[no_mangle]
    | ^^^^^^^^^^^^
    |
    = note: the 
linker's behavior with 
multiple libraries 
exporting duplicate 
symbol names is 
undefined and Rust 
cannot provide 
guarantees when you 
manually override them

error: declaration of 
a `no_mangle` function
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:146:1
    |
146 | #[no_mangle]
    | ^^^^^^^^^^^^
    |
    = note: the 
linker's behavior with 
multiple libraries 
exporting duplicate 
symbol names is 
undefined and Rust 
cannot provide 
guarantees when you 
manually override them

error[E0425]: cannot 
find function 
`init_logger` in this 
scope
  --> C:\Users\Revanth\
Downloads\ZERO\target\d
ebug\build\zero-protoco
l-f468ca3d3c411ee7\out/
zero.uniffi.rs:55:8
   |
55 | pub fn 
r#init_logger(
   |        
^^^^^^^^^^^^^ not 
found in this scope

error[E0599]: no 
function or associated 
item named `new` found 
for struct `ZeroNode` 
in the current scope
  --> C:\Users\Revanth\
Downloads\ZERO\target\d
ebug\build\zero-protoco
l-f468ca3d3c411ee7\out/
zero.uniffi.rs:84:12
   |
82 |   impl r#ZeroNode 
{
   |  ______-
83 | |     
#[uniffi::constructor]
84 | |     pub fn 
r#new(
   | |           
-^^^^^ function or 
associated item not 
found in `ZeroNode`
   | |___________|
   |
   |
  ::: zero-protocol\src
\api.rs:9:1
   |
 9 |   pub struct 
ZeroNode {
   |   
------------------- 
function or associated 
item `new` not found 
for this struct
   |
note: if you're trying 
to build a new 
`ZeroNode`, consider 
using 
`ZeroNode::create_new` 
which returns 
`Result<ZeroNode, 
ZeroError>`
  --> zero-protocol\src
\api.rs:15:5
   |
15 |     pub fn 
create_new() -> 
Result<Self, 
ZeroError> {
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^
   = help: items from 
traits can only be 
used if the trait is 
implemented and in 
scope
   = note: the 
following traits 
define an item `new`, 
perhaps you need to 
implement one of them:
           candidate 
#1: `aws_lc_rs::aead::B
oundKey`
           candidate 
#2: `crypto_common::Key
Init`
           candidate 
#3: `crypto_common::Key
IvInit`
           candidate 
#4: `curve25519_dalek::
traits::VartimePrecompu
tedMultiscalarMul`
           candidate 
#5: `digest::VariableOu
tput`
           candidate 
#6: `digest::core_api::
VariableOutputCore`
           candidate 
#7: `digest::digest::Di
gest`
           candidate 
#8: `digest::mac::Mac`
           candidate 
#9: `parking_lot_core::
thread_parker::ThreadPa
rkerT`
           candidate 
#10: `rand::distr::unif
orm::UniformSampler`
           candidate 
#11: `rand::distributio
ns::uniform::UniformSam
pler`
           candidate 
#12: 
`ring::aead::BoundKey`
           candidate 
#13: `typenum::marker_t
raits::Bit`

error[E0308]: 
mismatched types
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:90:1
    |
 90 | #[::uniffi::expor
t_for_udl]
    | ^^^^^^^^^^^^^^^^^
^^^^^^^^^^
    | |
    | expected `Result<
Arc<ZeroContact>, 
ZeroError>`, found 
`Result<ZeroContact, 
_>`
    | arguments to 
this function are 
incorrect
    |
    = note: expected 
enum `Result<Arc<ZeroCo
ntact>, ZeroError>`
               found 
enum 
`Result<ZeroContact, 
_>`
help: the return type 
of this call is 
`Result<ZeroContact, 
_>` due to the type of 
the argument passed
   --> C:\Users\Revanth
\Downloads\ZERO\target\
debug\build\zero-protoc
ol-f468ca3d3c411ee7\out
/zero.uniffi.rs:90:1
    |
 90 | #[::uniffi::expor
t_for_udl]
    | ^^^^^^^^^^^^^^^^^
^^^^^^^^^^ this 
argument influences 
the return type of 
`lower_return`
note: associated 
function defined here
   --> C:\Users\Revanth
\.cargo\registry\src\in
dex.crates.io-1949cf8c6
b5b557f\uniffi_core-0.2
8.3\src\ffi_converter_t
raits.rs:278:8
    |
278 |     fn 
lower_return(v: Self) 
-> Result<Self::ReturnT
ype, RustCallError>;
    |        
^^^^^^^^^^^^
    = note: this error 
originates in the 
attribute macro `::unif
fi::export_for_udl` 
(in Nightly builds, 
run with -Z 
macro-backtrace for 
more info)

Some errors have 
detailed explanations: 
E0308, E0425, E0599.
For more information 
about an error, try 
`rustc --explain 
E0308`.
warning: 
`zero-protocol` (lib) 
generated 1 warning
error: could not 
compile 
`zero-protocol` (lib) 
due to 9 previous 
errors; 1 warning 
emitted
